--- a/css/style.css
+++ b/css/style.css
@@ -506,36 +506,98 @@ img {
   width: 5px;
   height: 5px;
   background-color: #0fd7af;
-  top: 22.5%;
-  left: 7.4%;
   position: absolute;
-  border-radius: 25px;
-  -webkit-animation: dots 1.3s infinite ease-out;
-          animation: dots 1.3s infinite ease-out;
+  border-radius: 50px;
+  -webkit-animation: dots 2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+          animation: dots 2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
 }
-@-webkit-keyframes dots {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scale(5.5);
-            transform: scale(5.5);
-    opacity: 0;
-  }
+.home__maps--dot-1 {
+  left: 7.27%;
+  top: 22.35%;
 }
-@keyframes dots {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scale(5.5);
-            transform: scale(5.5);
-    opacity: 0;
-  }
+.home__maps--dot-2 {
+  left: 5.74%;
+  top: 32.75%;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+.home__maps--dot-3 {
+  left: 20.95%;
+  top: 28.3%;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+.home__maps--dot-4 {
+  left: 29%;
+  top: 57.95%;
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+.home__maps--dot-5 {
+  left: 22.48%;
+  top: 83.43%;
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+.home__maps--dot-6 {
+  left: 45.8%;
+  top: 18%;
+  -webkit-animation-delay: 0.35s;
+          animation-delay: 0.35s;
+}
+.home__maps--dot-7 {
+  left: 49.7%;
+  top: 20.85%;
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+.home__maps--dot-8 {
+  left: 59.4%;
+  top: 20.85%;
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+}
+.home__maps--dot-9 {
+  left: 60.24%;
+  top: 32.68%;
+  -webkit-animation-delay: 0.34s;
+          animation-delay: 0.34s;
+}
+.home__maps--dot-10 {
+  left: 64.2%;
+  top: 16.45%;
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+.home__maps--dot-11 {
+  left: 67.4%;
+  top: 40.26%;
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+.home__maps--dot-12 {
+  left: 76.1%;
+  top: 37.29%;
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+.home__maps--dot-13 {
+  left: 86.6%;
+  top: 40.1%;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+.home__maps--dot-14 {
+  left: 89%;
+  top: 32.8%;
+  -webkit-animation-delay: 0.75s;
+          animation-delay: 0.75s;
+}
+.home__maps--dot-15 {
+  left: 93%;
+  top: 80.4%;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
 }
 .home__decoration {
   z-index: -2;
@@ -560,6 +622,40 @@ img {
 .home__cards {
   margin-top: 175px;
   margin-bottom: 50px;
+}
+@-webkit-keyframes dots {
+  0% {
+    -webkit-transform: scale(0.6);
+            transform: scale(0.6);
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: scale(5.2);
+            transform: scale(5.2);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(5.2);
+            transform: scale(5.2);
+    opacity: 0;
+  }
+}
+@keyframes dots {
+  0% {
+    -webkit-transform: scale(0.6);
+            transform: scale(0.6);
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: scale(5.2);
+            transform: scale(5.2);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(5.2);
+            transform: scale(5.2);
+    opacity: 0;
+  }
 }
 .main-nav {
   position: relative;
@@ -2034,8 +2130,6 @@ img {
   width: calc(23.08%);
   padding-top: 20px;
   padding-bottom: 20px;
-  border-radius: 20px;
-  background-color: #1f242c;
 }
 .numbers__item span:nth-child(1) {
   font-size: 52px;
@@ -2046,12 +2140,6 @@ img {
 .numbers__item span:nth-child(2) {
   font-family: 'Roboto-Regular';
   font-size: 18px;
-}
-.numbers__item:hover {
-  -webkit-box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.25);
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
 }
 .numbers__item:hover span:nth-child(1) {
   color: #ffffff;
@@ -2084,6 +2172,70 @@ img {
     margin-top: 70px;
     margin-bottom: 20px;
   }
+  .home__map--dots {
+    width: 3px;
+    height: 3px;
+  }
+  .home__maps--dot-1 {
+    left: 7.27%;
+    top: 22.2%;
+  }
+  .home__maps--dot-2 {
+    left: 5.75%;
+    top: 32.66%;
+  }
+  .home__maps--dot-3 {
+    left: 20.7%;
+    top: 28.2%;
+  }
+  .home__maps--dot-4 {
+    left: 28.9%;
+    top: 57.6%;
+  }
+  .home__maps--dot-5 {
+    left: 22.47%;
+    top: 82.7%;
+  }
+  .home__maps--dot-6 {
+    left: 45.6%;
+    top: 17.9%;
+  }
+  .home__maps--dot-7 {
+    left: 49.7%;
+    top: 20.85%;
+  }
+  .home__maps--dot-8 {
+    left: 59.4%;
+    top: 20.85%;
+  }
+  .home__maps--dot-9 {
+    left: 60.24%;
+    top: 32.68%;
+  }
+  .home__maps--dot-10 {
+    left: 64.1%;
+    top: 16.45%;
+  }
+  .home__maps--dot-11 {
+    left: 67.4%;
+    top: 40.26%;
+  }
+  .home__maps--dot-12 {
+    left: 76.1%;
+    top: 37.29%;
+  }
+  .home__maps--dot-13 {
+    left: 86.6%;
+    top: 40.1%;
+  }
+  .home__maps--dot-14 {
+    left: 89%;
+    top: 32.8%;
+  }
+  .home__maps--dot-15 {
+    left: 93%;
+    top: 80%;
+  }
   .cards__wrapper {
     padding-right: 20px;
     padding-left: 20px;
@@ -2102,6 +2254,14 @@ img {
         margin-bottom: 0;
         margin-top: 50px;
     }*/
+  .card__item--profession {
+    padding-top: 40px;
+    padding-bottom: 0;
+    margin-bottom: 30px;
+  }
+  .card__item--profession:hover {
+    margin-bottom: 50px;
+  }
   .services__wrapper {
     -ms-flex-pack: distribute;
         justify-content: space-around;
@@ -2235,6 +2395,9 @@ img {
   .about-page__decoration--text {
     font-size: 150px;
     top: 5%;
+  }
+  .about-page__decoration--dotted-2 {
+    top: 1250px;
   }
 }
 @media (min-width: 768px) {
@@ -2390,6 +2553,13 @@ img {
   .cards__text {
     font-size: 14px;
     line-height: 1.85em;
+  }
+  .card__item--profession {
+    width: 100%;
+    max-width: 320px;
+    padding-top: 40px;
+    padding-bottom: 0;
+    margin-bottom: 20px;
   }
   .project__cards {
     margin-top: 50px;
@@ -2591,6 +2761,10 @@ img {
   .footer__logo .main-nav__logo {
     margin: 0;
   }
+  .breadcrumbs {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
   .about-page__decoration--text {
     font-size: 100px;
     top: 2.5%;
@@ -2603,6 +2777,12 @@ img {
   }
   .about-page__decoration--dotted-3 {
     display: none;
+  }
+  .about-page__decoration--dotted-2 {
+    top: 1250px;
+  }
+  .about-page__cards {
+    margin-bottom: 60px;
   }
   .numbers {
     padding: 0;
@@ -2646,6 +2826,50 @@ img {
   .home__cards {
     margin-top: 50px;
     margin-bottom: 30px;
+  }
+  .home__map--dots {
+    width: 2px;
+    height: 2px;
+  }
+  .home__maps--dot-1 {
+    left: 7.27%;
+    top: 22.1%;
+  }
+  .home__maps--dot-2 {
+    left: 5.58%;
+    top: 31.89%;
+  }
+  .home__maps--dot-3 {
+    left: 20.7%;
+    top: 27.5%;
+  }
+  .home__maps--dot-4 {
+    left: 28.9%;
+    top: 56.6%;
+  }
+  .home__maps--dot-5 {
+    left: 22.47%;
+    top: 81.8%;
+  }
+  .home__maps--dot-11 {
+    left: 67.4%;
+    top: 39.5%;
+  }
+  .home__maps--dot-12 {
+    left: 76.15%;
+    top: 36.4%;
+  }
+  .home__maps--dot-13 {
+    left: 86.6%;
+    top: 39.5%;
+  }
+  .home__maps--dot-14 {
+    left: 89%;
+    top: 32.8%;
+  }
+  .home__maps--dot-15 {
+    left: 92.8%;
+    top: 79%;
   }
   .site-list__button-contact {
     border-color: #0fd7af;
