--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,7 @@ img {
 .page__nav {
   -webkit-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.2);
+  background-color: #1f242c;
 }
 .page__services {
   position: relative;
@@ -1034,6 +1035,69 @@ img {
   font-family: 'IBMPlexMono-Regular';
   font-size: 16px;
   color: #0fd7af;
+}
+.card__item--services {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 40px;
+  min-height: 510px;
+  margin-bottom: 10px;
+}
+.cards__services-name {
+  font-size: 22px;
+  font-family: 'IBMPlexMono-Bold';
+  margin-bottom: 20px;
+  text-align: center;
+}
+.cards__services-line {
+  width: 71.87%;
+  font-size: 16px;
+  line-height: 36px;
+  font-family: 'Roboto-Light';
+  position: relative;
+  padding-left: 55px;
+  display: block;
+}
+.cards__services-line svg {
+  position: absolute;
+  left: 25px;
+  top: 2px;
+  width: 14px;
+  height: 16px;
+  fill: #6c727b;
+  margin-right: 15px;
+  padding-bottom: 15px;
+  padding-top: 5px;
+  float: left;
+}
+.cards__services-line:hover {
+  color: #0fd7af;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+.cards__services-line:hover svg {
+  fill: #0fd7af;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.card__item--services-icon {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: #1a1f27;
+  position: relative;
+  margin-bottom: 30px;
+}
+.services__icon-svg {
+  width: 70px;
+  height: 70px;
+  top: calc(50% - 35px);
+  left: calc(50% - 35px);
+  position: absolute;
+  fill: #0fd7af;
 }
 .services {
   max-width: 1180px;
@@ -2151,6 +2215,264 @@ img {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
+.services-page {
+  padding-right: 20px;
+  padding-left: 20px;
+  position: relative;
+}
+.services-page__header {
+  font-family: 'IBMPlexMono-Bold';
+  font-size: 42px;
+  margin-bottom: 16px;
+  text-align: center;
+  margin-top: 60px;
+}
+.services-page__text--type {
+  font-size: 20px;
+  color: #977cf3;
+  font-family: 'Roboto-Regular';
+  text-align: center;
+  letter-spacing: 0.04em;
+}
+.services__cards {
+  margin-top: 50px;
+  margin-bottom: 120px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.services-page__decoration--text {
+  font-size: 200px;
+  font-family: 'IBMPlexMono-Bold';
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: -20px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  z-index: -3;
+  color: #1a1f27;
+}
+.services-page__decoration--dotted-1 {
+  position: absolute;
+  top: 155px;
+  left: 0%;
+  z-index: -5;
+}
+.services-page__decoration--dotted-2 {
+  position: absolute;
+  top: -200px;
+  right: 14%;
+  z-index: -5;
+}
+.services-page__decoration--dotted-3 {
+  position: absolute;
+  top: 900px;
+  right: 0%;
+  z-index: -5;
+}
+.services-page__decoration--dotted-4 {
+  position: absolute;
+  top: 1790px;
+  right: 27.5%;
+  z-index: -5;
+}
+.services--card-fix br {
+  display: none;
+}
+.portfolio-page {
+  padding-right: 20px;
+  padding-left: 20px;
+  max-width: 1170px;
+  margin: 0 auto;
+  position: relative;
+}
+.portfolio-page__header {
+  font-family: 'IBMPlexMono-Bold';
+  font-size: 42px;
+  margin-bottom: 16px;
+  text-align: center;
+  margin-top: 60px;
+}
+.portfolio-page__text--type {
+  font-size: 20px;
+  color: #977cf3;
+  font-family: 'Roboto-Regular';
+  text-align: center;
+  letter-spacing: 0.04em;
+}
+.portfolio-page__block {
+  margin-top: 50px;
+  margin-bottom: 130px;
+}
+.portfolio-page__decoration--text {
+  font-size: 200px;
+  font-family: 'IBMPlexMono-Bold';
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 230px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  z-index: -3;
+  color: #1a1f27;
+}
+.portfolio-page__decoration--dotted-1 {
+  position: absolute;
+  bottom: -500px;
+  left: -20%;
+  z-index: -5;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+.work__wrapper {
+  max-width: 1170px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.work__item {
+  width: 48.71%;
+  -webkit-box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  overflow: hidden;
+  background-color: #1f242c;
+  margin-top: 20px;
+}
+.work__item:hover {
+  -webkit-transition: 0.1s ease;
+  transition: 0.1s ease;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.work__picture {
+  height: 330px;
+  overflow: hidden;
+  position: relative;
+}
+.work__picture:after {
+  display: block;
+  content: '';
+  width: 100%;
+  height: 330px;
+  position: absolute;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(24%, rgba(26, 31, 39, 0)), to(rgba(26, 31, 39, 0.6)));
+  background-image: linear-gradient(to bottom, rgba(26, 31, 39, 0) 24%, rgba(26, 31, 39, 0.6) 100%);
+  top: 0;
+  left: 0;
+  z-index: 2;
+  outline: 1px solid red;
+}
+.work__description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 38px;
+  padding-right: 38px;
+  padding-top: 33px;
+  padding-bottom: 29px;
+  position: relative;
+  border-bottom: 1px solid #363a42;
+}
+.work__description a {
+  font-family: 'IBMPlexMono-Bold';
+  font-size: 30px;
+  color: #ffffff;
+  line-height: 48px;
+  padding-bottom: 8px;
+}
+.work__description a:hover {
+  color: #0fd7af;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.work__description a:active {
+  color: #4f555f;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+.work__description span {
+  font-family: 'Roboto-Light';
+  font-size: 18px;
+  line-height: 30px;
+}
+.work__badges {
+  position: absolute;
+  top: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 2;
+}
+.work__badges span {
+  padding: 10px;
+  padding-top: 8px;
+  padding-bottom: 9px;
+  color: #ffffff;
+  background-color: #0fd7af;
+  font-family: 'Roboto-Medium';
+  margin-right: 7px;
+  border-radius: 3px;
+  font-size: 14px;
+}
+.work__team {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  padding-left: 38px;
+  padding-right: 38px;
+  padding-top: 35px;
+  padding-bottom: 40px;
+}
+.work__team img {
+  width: 100px;
+  height: 100px;
+  padding-top: 10px;
+}
+.work__team-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 40px;
+  position: relative;
+}
+.work__team-text span:nth-child(1) {
+  font-family: 'IBMPlexMono-Bold';
+  line-height: 48px;
+  font-size: 24px;
+  margin-bottom: 7px;
+}
+.work__team-text span:nth-child(2) {
+  font-family: 'Roboto-Light';
+  line-height: 32px;
+  font-size: 18px;
+  letter-spacing: 0.005em;
+}
+.work__team-text svg {
+  position: absolute;
+  top: -20px;
+  left: 20px;
+  width: 89px;
+  height: 72px;
+  fill: #151a22;
+  z-index: -1;
+}
 @media (min-width: 768px) and (max-width: 1200px) {
   .home__map {
     width: 70%;
@@ -2261,6 +2583,10 @@ img {
   }
   .card__item--profession:hover {
     margin-bottom: 50px;
+  }
+  .card__item--services {
+    padding-top: 30px;
+    min-height: 500px;
   }
   .services__wrapper {
     -ms-flex-pack: distribute;
@@ -2398,6 +2724,47 @@ img {
   }
   .about-page__decoration--dotted-2 {
     top: 1250px;
+  }
+  .services-page__decoration--text {
+    font-size: 150px;
+    top: 1%;
+  }
+  .services-page__decoration--dotted-1 {
+    position: absolute;
+    top: 155px;
+    left: 0%;
+    z-index: -5;
+  }
+  .services-page__decoration--dotted-2 {
+    position: absolute;
+    top: -200px;
+    right: 14%;
+    z-index: -5;
+  }
+  .services-page__decoration--dotted-3 {
+    position: absolute;
+    top: 1200px;
+    right: 0%;
+    z-index: -5;
+  }
+  .services-page__decoration--dotted-4 {
+    position: absolute;
+    top: 2420px;
+    right: 27.5%;
+    z-index: -5;
+  }
+  .portfolio-page__decoration--text {
+    font-size: 150px;
+    top: 1%;
+  }
+  .portfolio-page__decoration--dotted-1 {
+    position: absolute;
+    bottom: -300px;
+    left: 0%;
+    z-index: -5;
+  }
+  .work__picture {
+    height: 250px;
   }
 }
 @media (min-width: 768px) {
@@ -2555,6 +2922,13 @@ img {
     line-height: 1.85em;
   }
   .card__item--profession {
+    width: 100%;
+    max-width: 320px;
+    padding-top: 40px;
+    padding-bottom: 0;
+    margin-bottom: 20px;
+  }
+  .card__item--services {
     width: 100%;
     max-width: 320px;
     padding-top: 40px;
@@ -2769,6 +3143,9 @@ img {
     font-size: 100px;
     top: 2.5%;
   }
+  .about-page__text--type {
+    font-size: 18px;
+  }
   .about-page__title {
     margin-top: 50px;
   }
@@ -2793,6 +3170,76 @@ img {
   }
   .numbers__item span:nth-child(2) {
     font-size: 16px;
+  }
+  .services-page {
+    overflow: hidden;
+  }
+  .services__cards {
+    margin-bottom: 60px;
+  }
+  .services-page__text--type {
+    font-size: 18px;
+  }
+  .services-page__decoration--text {
+    font-size: 100px;
+    top: 1.9%;
+  }
+  .services-page__decoration--dotted-1 {
+    position: absolute;
+    top: 455px;
+    left: 0%;
+    z-index: -5;
+  }
+  .services-page__decoration--dotted-2 {
+    position: absolute;
+    top: -50px;
+    right: 2%;
+    z-index: -5;
+  }
+  .services-page__decoration--dotted-3 {
+    position: absolute;
+    top: 3000px;
+    right: 0%;
+    z-index: -5;
+  }
+  .services-page__decoration--dotted-4 {
+    position: absolute;
+    top: 4520px;
+    right: 27.5%;
+    z-index: -5;
+  }
+  .services--card-fix br {
+    display: inherit;
+  }
+  .portfolio-page__text--type {
+    font-size: 18px;
+  }
+  .portfolio-page__decoration--text {
+    font-size: 100px;
+    top: 6.9%;
+  }
+  .portfolio-page__decoration--dotted-1 {
+    position: absolute;
+    bottom: -300px;
+    left: 0%;
+    z-index: -5;
+  }
+  .portfolio-page {
+    overflow: hidden;
+  }
+  .portfolio-page__block {
+    margin-top: 50px;
+    margin-bottom: 60px;
+  }
+  .work__wrapper {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .work__item {
+    width: 100%;
+    max-width: 570px;
+    margin-bottom: 20px;
   }
 }
 @media (max-width: 767.8px) {
@@ -2974,5 +3421,25 @@ img {
 @media (max-width: 330px) {
   .numbers__item {
     width: 50%;
+  }
+}
+@media (max-width: 540px) {
+  .work__team {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .work__team-text {
+    padding-left: 0;
+  }
+  .work__picture {
+    height: 250px;
   }
 }
