--- a/css/style.css
+++ b/css/style.css
@@ -2156,12 +2156,12 @@ img {
   margin-bottom: 15px;
 }
 .about-page__text--big {
-  font-family: 'Roboto-Light';
-  font-size: 22px;
-  color: #b0b6c8;
-  margin-top: 21px;
-  margin-bottom: 18px;
-  line-height: 36px;
+  /*font-family: 'Roboto-Light';
+    font-size: 22px;
+    color: @grey_blue;
+    margin-top: 21px;
+    margin-bottom: 18px;
+    line-height: 36px;*/
 }
 .about-page__cards {
   padding-top: 40px;
